tests/parser/invalid/missing_function_name.src
fn () -> int {
    return 0;
}
